# Gargantua

./: README.md  pyproject.toml
data/: shot_folders_to_be_renamed.csv
src/gargantua/: csv_file_reader.py  ingestion_builder.py  ingestion_operations.py  ingestion_processor.py  ingestion_utils.py  main.py
